@@ -27,7 +27,7 @@ m4_ifdef([SC_USE_CONFIG_HEADERS], [
 TCL_VERSION=8.5
 TCL_MAJOR_VERSION=8
 TCL_MINOR_VERSION=5
-TCL_PATCH_LEVEL=".6b1"
+TCL_PATCH_LEVEL=".6"
 VERSION=${TCL_VERSION}
 
 #------------------------------------------------------------------------
