@@ -2,6 +2,17 @@
 
 	*** 8.5.6 TAGGED FOR RELEASE ***
 
+	* generic/tcl.h:	Bump to 8.5.6 for release.
+	* library/init.tcl:
+	* tools/tcl.wse.in:
+	* unix/configure.in:
+	* unix/tcl.spec:
+	* win/configure.in:
+	* README:
+
+	* unix/configure:	autoconf-2.59
+	* win/configure:
+
 	* changes:	Update for 8.5.6 release.
 
 	* library/tclIndex: Removed reference to no-longer-extant procedure
